Hopefully the correct contrast ratio

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 
 :root {
   --desaturated-orange: hsl(36 40% 47% / 1);
-  --dark-blueish: hsl(220 35% 40% / 1);
+  --dark-blueish: hsl(220 41.7% 52.9% / 1);
   --body-font: "Josefin Sans", sans-serif;
 }
 
